[gd_scene load_steps=5 format=3 uid="uid://dbnja617reqrc"]

[ext_resource type="Script" path="res://Bullet.gd" id="1_48r0h"]
[ext_resource type="PackedScene" uid="uid://dkx6xs8gb1roc" path="res://hit_box.tscn" id="2_7ss1w"]
[ext_resource type="Texture2D" uid="uid://dop4i86c8g7fa" path="res://assets/projectile_ennemi_bolo.png" id="3_r1v7h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0ljkc"]
radius = 5.0

[node name="Bullet" type="Node2D"]
script = ExtResource("1_48r0h")

[node name="HitBox" parent="." instance=ExtResource("2_7ss1w")]
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CircleShape2D_0ljkc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.4, 1.4)
texture = ExtResource("3_r1v7h")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]

[editable path="HitBox"]
